--- a/homework#5/index.html
+++ b/homework#5/index.html
@@ -11,18 +11,20 @@
 <body>
     <header>
 
-        <span class="menu">
-        <a href="./home.html">Home</a>
-        <a href="./aboutus.html">About Us</a>
-        <a href="./services.html">Services</a>
-        <a href="./video.html">Video</a>
-        <a href="./gallery.html">Gallery</a>
-        <a href="./contact.html">Contact</a>
-        </span>
-    
         <span class="logo">
-        <img src="./images/STRANICA.jpg" alt="logo" width="270px" style="vertical-align:middle;margin:10px 250px">
+            <img src="./images/STRANICA.jpg" alt="logo" width="270px" style="vertical-align:middle;margin:10px 250px">
         </span>
+
+        <span class="menu">
+            <a href="./home.html">Home</a>
+            <a href="./aboutus.html">About Us</a>
+            <a href="./services.html">Services</a>
+            <a href="./video.html">Video</a>
+            <a href="./gallery.html">Gallery</a>
+            <a href="./contact.html">Contact</a>
+        </span>
+
+
     </header>
 
     <main>
@@ -32,21 +34,21 @@
             </div>
         </center>
 
-        <p>
-            <strong class="paragraph">
-                Сити Плус е студио за фотографија и кинематографија кое е основано во 2014 година во Скопје.
-                Специјализирано е за секаков вид на фотографија, почнувајќи од свадбената фотографија, предсвадбена
-                фотографија, портретна фотографија, студиска фотографија, семејна фотографија,
-                фотографија на настани како и многу други… Тимот на Сити Плус се
-                состои од млади и креативни луѓе кои работат квалитетно и беспрекорно за да ви ги доловат и
-                зачуваат сите оние убави спомени што ќе бидат богатство за вас и вашите најблиски со
-                генерации.
-            </strong>
+        <p class="paragraph">
+
+            Сити Плус е студио за фотографија и кинематографија кое е основано во 2014 година во Скопје.
+            Специјализирано е за секаков вид на фотографија, почнувајќи од свадбената фотографија,предсвадбена
+            фотографија, портретна фотографија, студиска фотографија, семејна фотографија,
+            фотографија на настани како и многу други…Тимот на Сити Плус се
+            состои од млади и креативни луѓе кои работат квалитетно и беспрекорно за да ви ги доловат и
+            зачуваат сите оние убави спомени што ќе бидат богатство за вас и вашите најблиски со
+            генерации.
+
         </p>
 
-        <center>
-            <h2>УСЛУГИ</h2>
-        </center>
+
+        <h2 id="uslugi">УСЛУГИ</h2>
+
 
         <nav>
             <div class="container">
