--- a/homework#5/aboutus.html
+++ b/homework#5/aboutus.html
@@ -11,6 +11,10 @@
 <body>
     <header>
 
+        <span class="logo">
+            <img src="./images/STRANICA.jpg" alt="logo" width="270px" style="vertical-align:middle;margin:10px 250px">
+        </span>
+
         <span class="menu">
             <a href="./index.html">Home</a>
             <a href="./aboutus.html">About Us</a>
@@ -20,9 +24,7 @@
             <a href="./contact.html">Contact</a>
         </span>
 
-        <span class="logo">
-            <img src="./images/STRANICA.jpg" alt="logo" width="270px" style="vertical-align:middle;margin:10px 250px">
-        </span>
+
     </header>
 
     <main>
@@ -43,9 +45,27 @@
             the result of a visual culture that matures over time and is constantly evolving thanks to our attention and
             sensitivity to photography. We want to work with couples who are really woven and madly in love. Our team is
             here to tell the story for you. At the same time, we take the time to meet our clients, a way to fulfill
-            their wishes and to be part of those who tell the story of their LOVE.
+            their wishes and to be part of those who tell the story of their <span>LOVE</span>.
         </p>
     </main>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+
+    <div>
+
+        <footer id="footer">
+            <p>CityPlusFoto© 2020 Сите права се задржани.</p>
+        </footer>
+    </div>
 
 </body>
 
