--- a/homework#5/video.html
+++ b/homework#5/video.html
@@ -11,6 +11,10 @@
 <body>
     <header>
 
+        <span class="logo">
+            <img src="./images/STRANICA.jpg" alt="logo" width="270px" style="vertical-align:middle;margin:10px 250px">
+        </span>
+
         <span class="menu">
             <a href="./index.html">Home</a>
             <a href="./aboutus.html">About Us</a>
@@ -19,8 +23,13 @@
             <a href="./gallery.html">Gallery</a>
             <a href="./contact.html">Contact</a>
         </span>
-
-        <span class="logo">
-            <img src="./images/STRANICA.jpg" alt="logo" width="270px" style="vertical-align:middle;margin:10px 250px">
-        </span>
     </header>
+
+    <main>
+        <span class="videos">
+            <video src="./videos/Love Story 4.mp4" type="video/mp4" width="500px" height="300px" preload="metadata"
+                controls loop poster="./images/11.JPG"></video>
+            <video src="./videos/Love Story 5.mp4" type="video/mp4" width="500px" height="300px" preload="metadata"
+                controls loop poster="./images/12.JPG"></video>
+        </span>
+    </main>
