--- a/homework#5/services.html
+++ b/homework#5/services.html
@@ -11,6 +11,10 @@
 <body>
     <header>
 
+        <span class="logo">
+            <img src="./images/STRANICA.jpg" alt="logo" width="270px" style="vertical-align:middle;margin:10px 250px">
+        </span>
+
         <span class="menu">
             <a href="./index.html">Home</a>
             <a href="./aboutus.html">About Us</a>
@@ -20,7 +24,51 @@
             <a href="./contact.html">Contact</a>
         </span>
 
-        <span class="logo">
-            <img src="./images/STRANICA.jpg" alt="logo" width="270px" style="vertical-align:middle;margin:10px 250px">
-        </span>
     </header>
+
+    <main>
+        <nav>
+            <div class="container">
+
+                <div class="firstrow">
+                    <img src="./images/4.jpg" alt="svadbena fotografija" width="390px">
+                    <div class="desc">СВАДБЕНА ФОТОГРАФИЈА</div>
+                </div>
+                <div class="firstrow">
+                    <img src="./images/5.jpg" alt="predsvadbena fotografija" width="390px">
+                    <div class="desc">ПРЕДСВАДБЕНА ФОТОГРАФИЈА</div>
+                </div>
+                <div class="firstrow">
+                    <img src="./images/6.jpg" alt="maturska fotografija" width="390px">
+                    <div class="desc">МАТУРСКА ФОТОГРАФИЈА</div>
+                </div>
+            </div>
+        </nav>
+
+        <nav>
+            <div class="container">
+
+                <div class="firstrow">
+                    <img src="./images/7.jpg" alt="detska fotografija" width="390px">
+                    <div class="desc">ДЕТСКА ФОТОГРАФИЈА</div>
+                </div>
+                <div class="firstrow">
+                    <img src="./images/8.jpg" alt="semejna fotografija" width="390px">
+                    <div class="desc">СЕМЕЈНА ФОТОГРАФИЈА</div>
+                </div>
+                <div class="firstrow">
+                    <img src="./images/10.jpg" alt="studiska fotografija" width="390">
+                    <div class="desc">СТУДИСКА ФОТОГРАФИЈА</div>
+                </div>
+            </div>
+        </nav>
+    </main>
+
+    <div>
+
+        <footer id="footer">
+            <p>CityPlusFoto© 2020 Сите права се задржани.</p>
+        </footer>
+    </div>
+
+</html>
